<resources>
    <string name="app_name">Git Viewer</string>
    <string name="view_more">Ver Mais</string>
    <string name="last_update">Últime atualizacão</string>
    <string name="visualizacao">%1$s visualizacões</string>
    <string name="stars">%1$s estrelas</string>
    <string name="subscribes">%1$s inscritos</string>
    <string name="contribuitors">%1$s contribuidores</string>
    <string name="view_person">Ver perfil</string>
    <string name="push">PUSH</string>
    <string name="watch">WATCH</string>
    <string name="create">CREATE</string>
    <string name="problems">PROBLEM</string>
    <string name="nothing">NOTHING</string>
    <string name="fork">FORK</string>
    <string name="commentProblem">COMMENT</string>
    <string name="pull">PULL</string>
    <string name="review_comment">REVIEW COMMENT</string>
    <string name="review">REVIEW</string>
    <string name="delete">DELETE</string>
    <string name="followers">Seguidores</string>
    <string name="following">Seguindo</string>
    <string name="repos">Repositórios</string>
    <string name="language">Linguagem: %1$s</string>
    <string name="branch">Branch: %1$s</string>
    <string name="no_especification">Sem especificação</string>
    <string name="last_events">Últimos eventos relacionados a este repositório</string>
    <string name="no_description">Sem descrição</string>
    <string name="loading">Carregando…</string>
    <string name="retry">Recarregar</string>
    <string name="try_again">Tente novamente</string>
    <string name="ops_error">Ops! Algo deu errado :/</string>
    <string name="nothing_phrase">Parece que nada foi encontrado por aqui.</string>
    <string name="search_repository">Pesquise algum reposótório</string>
    <string name="search_new_perfil">Pesquise um novo perfil</string>
    <string name="dica_name_user">Dica: Digite exatamente o nome do usuário</string>
    <string name="open_github">Abrir Github</string>
    <string name="find">Buscar</string>
</resources>