<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.breno.gitviewer.user.viewmodel.UserDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_user"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/black"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/name_item_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.user.login}"
            app:layout_constraintBottom_toTopOf="@id/recycler_post_item_user"
            app:layout_constraintEnd_toEndOf="@id/img_item_user"
            app:layout_constraintStart_toStartOf="@id/img_item_user"
            app:layout_constraintTop_toBottomOf="@id/img_item_user"
            tools:text="Jonas Selman" />

        <com.breno.gitviewer.CountDescription
            android:id="@+id/count_description_repos_item_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:description="@string/repos"
            app:layout_constraintBottom_toBottomOf="@id/img_item_user"
            app:layout_constraintEnd_toStartOf="@id/count_description_followers_item_user"
            app:layout_constraintStart_toEndOf="@id/name_item_user"
            app:layout_constraintTop_toTopOf="@id/img_item_user"
            app:qtd="@{viewModel.user.public_repos.toString()}" />

        <com.breno.gitviewer.CountDescription
            android:id="@+id/count_description_followers_item_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onNavigation(viewModel.USERS_FOLLOWING)}"
            app:description="@string/following"
            app:layout_constraintStart_toEndOf="@id/count_description_repos_item_user"
            app:layout_constraintBottom_toBottomOf="@id/img_item_user"
            app:layout_constraintEnd_toStartOf="@id/count_description_following_item_user"
            app:layout_constraintTop_toTopOf="@id/img_item_user"
            app:qtd="@{viewModel.user.followers.toString()}" />


        <com.breno.gitviewer.CountDescription
            android:id="@+id/count_description_following_item_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onNavigation(viewModel.USERS_FOLLOWERS)}"
            app:description="@string/followers"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="@id/count_description_repos_item_user"
            app:layout_constraintBottom_toBottomOf="@id/img_item_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_item_user"
            app:qtd="@{viewModel.user.following.toString()}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_post_item_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_item_user"
            tools:listitem="@layout/item_user_repositorie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>